Java 17 이슈 수정 - 아마도 리소스 번들 로드가 제대로 안되었겠다...😅
이전에 Java 17로 올리고 JUnit에서 별 이상이 없어서 그냥 넘어갔는데, 문제가 있는 부분이 있었다.
Struts 2의 리소스 번들을 리로드 하는 코드가 Java 리플렉션을 이용해 ResourceBundle의 private final 필드에
접근을 시도하는데, Java 16 이전에는 이런 접근에 대해 차단까진 안하고 경고가 나오거나 했는데,
Java 16부터는 기본값이 차단이여서, 허용옵션을 붙여줘야했다.

다른 프로젝트 올릴 때도 JUnit 외에도 직접 Jetty 서버 돌려서 실행로그 확인해보는 것이 좋겠다.

---
JVM옵션을 제거하더라도 다국어 변환은 잘 되긴하던데.. 천천히 생각해보자...