@@ -282,6 +282,22 @@
           </toolchains>
         </configuration>
       </plugin>
+      
+      <!-- 
+        java.lang.reflect.InaccessibleObjectException: 
+        Unable to make field private static final java.util.concurrent.ConcurrentMap 
+        java.util.ResourceBundle.cacheList accessible: 
+        module java.base does not "opens java.util" to unnamed module 관련 처리
+      -->      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>        
+        <configuration>
+          <argLine>
+            --add-opens=java.base/java.util=ALL-UNNAMED
+          </argLine>
+        </configuration>        
+      </plugin>
 
       <plugin>
         <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
@@ -289,6 +305,9 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jetty.version}</version>
         <configuration>
+          <jvmArgs>
+            --add-opens java.base/java.util=ALL-UNNAMED
+          </jvmArgs>
           <webApp>
             <contextPath>/${project.build.finalName}</contextPath>
             <sessionHandler>
